--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
     position: relative;
     width: 60px;
     height: 60px;
-    background: url('media/menu.png');
+    background: url('Media/menu.png');
     background-repeat: no-repeat;
     background-size: 30px;
     background-position: center;
@@ -58,7 +58,7 @@
 }
 
 .toggle.active {
-    background: url('media/close.png');
+    background: url('Media/close.png');
     background-repeat: no-repeat;
     background-size: 30px;
     background-position: center;
